FF Bugfix - placeholder alignment in med viewport sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,31 @@ body {
 
 .md-search-bar::placeholder {
   font-size: 14px;
-  line-height: 1.4;
+  line-height: 42px;
+  color: #555;
+}
+
+.md-search-bar::-webkit-input-placeholder {
+  font-size: 14px;
+  line-height: 42px;
+  color: #555;
+}
+
+.md-search-bar::-moz-placeholder {
+  font-size: 14px;
+  line-height: 42px;
+  color: #555;
+}
+
+.md-search-bar:-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 42px;
+  color: #555;
+}
+
+.md-search-bar::-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 42px;
   color: #555;
 }
 
